--- a/kubernetes-quickstart/src/kubernetes/kubernetes.yml
+++ b/kubernetes-quickstart/src/kubernetes/kubernetes.yml
@@ -7,6 +7,7 @@ metadata:
   labels:
     app.kubernetes.io/name: demo-app
     app.kubernetes.io/version: latest
+    k8soperators.github.com/chapter: "3"
   name: demo-app
 spec:
   replicas: 1
