Add custom label to Pod to update etag

--- a/kubernetes-quickstart/src/kubernetes/kubernetes.yml
+++ b/kubernetes-quickstart/src/kubernetes/kubernetes.yml
@@ -15,6 +15,7 @@ spec:
     matchLabels:
       app.kubernetes.io/name: demo-app
       app.kubernetes.io/version: latest
+      k8soperators.github.com/chapter: "3"
   template:
     metadata:
       annotations:
@@ -22,6 +23,7 @@ spec:
       labels:
         app.kubernetes.io/name: demo-app
         app.kubernetes.io/version: latest
+        k8soperators.github.com/chapter: "3"
     spec:
       containers:
         - env:
